fix html structure and alignment for illustration devices (desktop)

--- a/src/scss/components/_article.scss
+++ b/src/scss/components/_article.scss
@@ -3,6 +3,7 @@
 @use '../abstracts/mixins' as m;
 
 .article {
+  margin: 0 3rem;
   font-family: 'Barlow Condensed';
 
   &__new {
